<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/reTitle"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:id="@+id/reMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reTitle"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/llPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_position"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3" />

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/senser_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llPosition"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dp"
            android:background="@drawable/pressure_bg"
            android:orientation="vertical"
            android:padding="5dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_pressure" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="气压："
                        android:textColor="@color/white"
                        android:textSize="13dip" />

                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/level_3" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/data_from_phone"
                android:textColor="#8fffffff"
                android:textSize="@dimen/level_4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/senser_layout"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_phe"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/phenomenon_bg_press"
                    android:gravity="center"
                    android:padding="5dip" >

                    <ImageView
                        android:id="@+id/ivPhe"
                        android:layout_width="30dip"
                        android:layout_height="30dip" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvPhenomenon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_5" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvGridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llCurrent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/actual_weather"
            android:textColor="@color/white"
            android:textSize="@dimen/level_3" />

        <GridView
            android:id="@+id/gridview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/tvGridView"
            android:layout_marginBottom="60dp"
            android:cacheColorHint="@color/transparent"
            android:choiceMode="singleChoice"
            android:fadingEdge="none"
            android:listSelector="@color/transparent"
            android:numColumns="4"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:layout_alignParentBottom="true"
            android:background="#30000000"
            android:gravity="center" >

            <TextView
                android:id="@+id/tvDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/upload_current_weather"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3" />

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dip"
                android:layout_toRightOf="@+id/tvDes"
                android:background="@drawable/iv_camera" />

            <ImageView
                android:id="@+id/ivThumb"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_margin="10dip"
                android:layout_toRightOf="@+id/tvDes"
                android:scaleType="fitXY"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dip"
                android:layout_toRightOf="@+id/tvDes"
                android:background="@drawable/iv_clear"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>